@@ -3,6 +3,7 @@ Alpha 0.014
 * Updated unit tests
 * Improved test coverage for static typing
 * Fixed bugs with "this" keyword when used inside classes
+* Fixed global wrapper function
 
 1/29/12 - Alpha 0.013
 --------
